<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditRecipeActivity">

    <EditText
            android:id="@+id/etRecipeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Recipe Name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" />

    <EditText
            android:id="@+id/etIngredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Ingredients"
            app:layout_constraintTop_toBottomOf="@id/etRecipeName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp" />

    <EditText
            android:id="@+id/etNotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Notes"
            app:layout_constraintTop_toBottomOf="@id/etIngredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp" />

    <ImageView
            android:id="@+id/ivRecipeImage"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="Recipe Image"
            app:layout_constraintTop_toBottomOf="@id/etNotes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_no_image" />

    <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            app:layout_constraintTop_toBottomOf="@id/ivRecipeImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>